<resources>
    <string name="app_name">New player Java</string>
    <string name="online_exam">Online Exam</string>
    <string name="email_hint">Адрес эл.почты</string>
    <string name="password_hint">Введите пароль</string>
    <string name="login">Войти</string>
    <string name="register">Новый пользователь? Зарегистрируйтесь!</string>
    <string name="name">Имя</string>
    <string name="are_u_a_teacher">Вы являетесь учителем?</string>
</resources>