<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegistration">

    <EditText
        android:id="@+id/nameText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText"
        app:layout_constraintVertical_bias="0.1"
        android:hint="@string/email_hint"/>

    <EditText
        android:id="@+id/pasText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText"
        app:layout_constraintVertical_bias="0.1"
        android:hint="@string/password_hint" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Готово"
        android:id="@+id/okBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="#ffffff"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pasText" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/isTeacher"
        android:text="@string/are_u_a_teacher"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/okBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pasText" />

</androidx.constraintlayout.widget.ConstraintLayout>